# sudoku

./: .clang-tidy  CMakeLists.txt  CMakePresets.json
cmake/: compile-options.cmake  install-config.cmake  install-rules.cmake  variables.cmake
src/: lib.cpp  lib.hpp  main.cpp
tests/: CMakeLists.txt
tests/src/: sudoku_test.cpp
